2008-07-17  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Decruft: Remove gc- and init-debugging macros.

	* libpq.c (GC_PRINT, INIT_PRINT): Delete macros
	and surrounding pre-processor conditionals.
	(xc_mark, xc_free): Remove `GC_PRINT' call.
	(res_mark, res_free, sepo_mark, sepo_free): Likewise.
	(init_module): Remove `INIT_PRINT' call.

2008-07-16  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Increase abstraction: Use "cell word 0" for lobport access.

	* libpq.c (LOBPORT_WITH_FLAGS_P): New macro.
	(OPLOBPORTP, OPINLOBPORTP): Use `LOBPORT_WITH_FLAGS_P'.
	(lob_mklobport): Use `SCM_SET_CELL_WORD_0'.

2008-07-16  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Increase abstraction: Make `res_box' handle NULL-check.

	* libpq.c (res_box): If given NULL, return Scheme false.
	(pg_exec, pg_exec_params, pg_exec_prepared, pg_send_query): Update.

2008-07-16  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Decruft: Inline single-use *_box funcs.

	* libpq.c (xc_box, sepo_box): Delete funcs.
	(pg_connectdb): Use `SCM_RETURN_NEWSMOB' directly.
	(pg_make_print_options): Likewise.

2008-07-16  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Increase abstraction: Use C macros for smob data access.

	* libpq.c (xc_unbox): Use `SCM_SMOB_DATA'.
	(res_unbox, sepo_unbox): Likewise.
	(xc_free): Use `SCM_SET_SMOB_DATA'.
	(res_free, sepo_free): Likewise.

2008-07-16  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Decruft: Elide internal function `make_res'.

	* libpq.c (make_res): Delete func;
	convert all callers to use `res_box (result)' instead.

2008-07-16  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Use guile.m4 facilities from Guile 1.4.1.118.

	* Makefile.am (install-data-hook): Use $(mkmodcat).

2008-07-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Move Scheme code into src/.

	* postgres-col-defs.scm: Move from ../scm/.
	* postgres-gxrepl.scm: Likewise.
	* postgres-meta.scm: Likewise.
	* postgres-qcons.scm: Likewise.
	* postgres-resdisp.scm: Likewise.
	* postgres-resx.scm: Likewise.
	* postgres-table.scm: Likewise.